Name:                nar-util
Version:             0.1.0
Synopsis:            NAR utility
Description:
    NAR archiver utility for creating and extracting
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Tools
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-nar-util
Cabal-Version:       >=1.8
data-files:          README.md

Executable           nar-util
  Main-Is:           Nar.hs
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    .
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , unix
                   , filepath
                   , directory
                   , optparse-applicative
                   , nar

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-nar-util
